<resources>
    <string name="app_name">contacts</string>
    <string name="rb_homme">Homme</string>
    <string name="rb_femme">Femme</string>
    <string name="rb_autre">Autre</string>

    <string name="content_desc_img">Image de profil</string>
    <string name="fav">Ajouter aux favoris</string>
    <string name="submt_btn">Enregistrer</string>
    <string name="hint_prenom">Prénom *</string>
    <string name="hint_nom">Nom *</string>
    <string name="hint_birth">Date de naissance</string>
    <string name="hint_numero">Numéro de téléphone *</string>
    <string name="hint_mail">Adresse électronique *</string>
    <string name="sbNom">Le champ nom ne doit pas être vide !</string>
    <string name="sbPrenom">Le champ prénom ne doit pas être vide !</string>
    <string name="sbMail">Le champ addresse électronique ne doit pas être vide !</string>
    <string name="sbErrMail">Invalide addresse électronique!</string>
    <string name="sbErrTel">Format numéro de téléphone invalide.</string>

    <string name="textButtonPrincActivity">Ajouter un contact</string>
    <string name="popuptitre">Titre</string>
    <string name="msgpopup">message</string>
    <string name="titrepopup">Récapitulation</string>
    <string name="msgImgDeCouv">Comment voulez-vous ajouter une photo</string>
    <string name="titreImgDeCouv">Ajour une photo</string>
    <string name="titreAutorisation">Autorisation Réquise</string>
    <string name="nonBouton">Non</string>
    <string name="ouiBouton">Oui</string>
    <string name="msgErrorPhoto">Impossible de prendre une photo</string>
    <string name="nom_et_pr_nom">nom et prénom</string>
    <string name="_tel" translatable="false">0707070707</string>
    <string name="photo_de_profil">photo de profil</string>
    <string name="appeler">Appeler</string>
    <string name="modifier">Modifier</string>
    <string name="message">Message</string>
    <string name="switch_favoris">Favoris</string>
    <string name="recherche">Recherche</string>
    <string name="email" translatable="false">E-mail</string>

    <string name="valider">Valider</string>
    <string name="annuler">Annuler</string>
    <string name="annulee">Annulé</string>

    <string name="msgAutorisationAppPhoto">Autoriser contacts à accéder à votre caméra</string>
    <string name="appPhoto">App. photo</string>
    <string name="galerie">Galerie</string>
    <string name="estDansFavoris">Ce contact est dans vos favoris</string>
    <string name="estPasDansFavoris">Ce contact n\'est pas dans vos favoris</string>
    <string name="msgNom">"Nom et prénom: "</string>
    <string name="msgGenre">"Genre: "</string>
    <string name="msgBirth">"Date de naissance: "</string>
    <string name="msgNum">"Numéro de téléphone: "</string>
    <string name="msgMail">"Adresse Electronique: "</string>
    <string name="msgFav">"Ajouter aux favoris: "</string>
    <string name="contacts_trouves">contacts trouvés</string>
    <string name="zero_contacts_trouves">Aucun contact trouvé</string>
    <string name="update">Modifications enregistrées</string>
    <string name="add">Contact ajouté</string>


    <string name="contacts" translatable="false">Contacts</string>
    <string name="_20_contacts" translatable="false">20 contacts</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="_08_avr_2022" translatable="false">08 avr. 2022</string>
    <string name="mobile" translatable="false">Mobile :</string>
    <string name="errorPerm">Permission non accordée</string>

</resources>